client/tag/css/main.css
.alertoverlay{
    z-index: 1000;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
}

.mainheader{
    margin-top: 20px;
}
.alertoverlay .alert{
    margin-bottom: 1px;
}

.alert-animated{
    animation-duration: 2s;
    animation-name: inout;
}

@keyframes inout {
    0% {
        height: 0;
        padding: 0 15px;
        opacity: 0;
    }

    10% {
        height: auto;
        padding: 15px;
        opacity: 1;
    }

    90% {
        height: auto;
        padding: 15px;
        opacity: 1;
    }

    100% {
        height: 0;
        padding: 0 15px;
        opacity: 0;
    }
}

.container{
    margin-top: 100px;
}

